<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/multiplay_board_layout" android:paddingLeft="0.0dip" android:paddingTop="0.0dip" android:paddingRight="0.0dip" android:paddingBottom="0.0dip" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="@style/ThemeOverlay.AppCompat.ActionBar" android:id="@id/multiplay_toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" />
    <TextView android:textColor="#ffffffff" android:id="@id/your_points" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="50.0dip" android:text="@string/your_points" android:layout_below="@id/multiplay_toolbar" />
    <TextView android:textColor="#ffffffff" android:id="@id/opponent_points" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_marginRight="36.0dip" android:text="@string/opponent_points" android:layout_below="@id/multiplay_toolbar" android:layout_alignParentRight="true" />
    <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/multiplay_won_label" android:background="#ff3c3c3c" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/you_won" android:layout_below="@id/multiplay_game_over_label" android:layout_alignRight="@id/multiplay_that_sucks_label" />
    <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/multiplay_lost_label" android:background="#ff3c3c3c" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/you_lost" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/multiplay_cant_move_that_label" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/cant_move_that_bruh" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/multiplay_not_your_turn_label" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/not_your_turn_stupid" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/multiplay_game_over_label" android:background="#ff3c3c3c" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="84.0dip" android:text="@string/game_over_bruh" android:layout_above="@id/multiplay_lost_label" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/multiplay_noice_label" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/noice" android:layout_below="@id/multiplay_toolbar" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/multiplay_that_sucks_label" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/that_sucks" android:layout_below="@id/multiplay_toolbar" android:layout_alignLeft="@id/multiplay_lost_label" />
    <TextView android:textSize="25.0sp" android:textColor="#ffffffff" android:id="@id/tie_label" android:background="#ff3c3c3c" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tied_bro" android:layout_alignBottom="@id/multiplay_won_label" android:layout_centerHorizontal="true" />
    <TextView android:textSize="25.0sp" android:id="@id/plus_one_label" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plus_one" android:layout_below="@id/your_points" android:layout_alignRight="@id/your_points" />
</RelativeLayout>