<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/host_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="25.0sp" android:ellipsize="none" android:layout_gravity="center" android:id="@id/host_instructions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/multiplayer_guide" />
            <TextView android:textSize="25.0sp" android:id="@id/host_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/host_status" />
            <androidx.appcompat.widget.AppCompatCheckBox android:textSize="25.0sp" android:gravity="center" android:layout_gravity="center|left" android:id="@id/knights_only_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/knights_only" />
            <androidx.appcompat.widget.AppCompatCheckBox android:textSize="25.0sp" android:gravity="center" android:layout_gravity="center|left" android:id="@id/bloodthirsty_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/bloodthirst" />
            <Button android:layout_gravity="center" android:id="@id/start_host_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/start_host" android:onClick="startHosting" />
            <Button android:layout_gravity="center" android:id="@id/stop_host_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/stop_host" android:onClick="stopHosting" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>