<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/settings_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.Toolbar android:theme="@style/ThemeOverlay.AppCompat.ActionBar" android:id="@id/settings_toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" android:layout_alignParentTop="true" />
    <ScrollView android:id="@id/settings_scrollview" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/bottom_buttons" android:layout_below="@id/settings_toolbar">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox android:textSize="30.0sp" android:id="@id/bloodthirst_default_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/bloodthirsty_by_default" android:drawableRight="?android:listChoiceIndicatorMultiple" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox android:textSize="30.0sp" android:id="@id/aggressive_computer_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/aggressive_computer" android:drawableRight="?android:listChoiceIndicatorMultiple" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox android:textSize="30.0sp" android:id="@id/smartComputer_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/smartComputer" android:drawableRight="?android:listChoiceIndicatorMultiple" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox android:textSize="30.0sp" android:id="@id/handicap_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/enable_handicap" android:drawableRight="?android:listChoiceIndicatorMultiple" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox android:textSize="30.0sp" android:id="@id/chess960_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/chess960" android:drawableRight="?android:listChoiceIndicatorMultiple" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox android:textSize="30.0sp" android:id="@id/queensAttack_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/queensAttack" android:drawableRight="?android:listChoiceIndicatorMultiple" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox android:textSize="30.0sp" android:id="@id/move_second_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:button="@null" android:text="@string/move_second" android:drawableRight="?android:listChoiceIndicatorMultiple" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/background_color_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/background_color" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/background_color_button" android:background="?android:colorBackground" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/bar_color_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/bar_color" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/bar_color_button" android:background="@color/colorPrimaryDark" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/secondary_color_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/secondary_color" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/secondary_color_button" android:background="@color/colorPrimary" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/board_color1_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/board_color_1" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/board_color1_button" android:background="@color/colorAccent" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/board_color2_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/board_color_2" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/board_color2_button" android:background="@android:color/black" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/piece_color_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/piece_color" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/piece_color_button" android:background="@android:color/white" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/selection_color_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/selection_color" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/selection_color_button" android:background="#ff888888" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:weightSum="1.0">
                <TextView android:textSize="30.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center_vertical" android:id="@id/text_color_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/text_color" android:layout_weight="0.99" />
                <FrameLayout android:background="#ff000000" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/text_color_button" android:background="#ffffffff" android:layout_width="50.0dip" android:layout_height="50.0dip" android:onClick="colorBoxClicked" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@id/bottom_buttons" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true">
        <Button android:id="@id/set_defaults_button" android:background="@color/colorAccent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/set_to_defaults" android:layout_weight="0.5" android:onClick="setDefaultsButtonClicked" />
        <Button android:id="@id/save_color_button" android:background="@color/colorAccent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/save_colors" android:layout_weight="0.5" android:onClick="saveColorsButtonClicked" />
    </LinearLayout>
</RelativeLayout>