<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/activity_main" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="40.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/main_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:maxLines="1" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textStyle="bold|italic" android:textColor="@color/materialcolorpicker__white" android:gravity="center" android:id="@id/main_slogan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_slogan" android:layout_below="@id/main_title" android:layout_centerHorizontal="true" android:textAllCaps="true" android:fontFamily="sans-serif" />
    <ImageView android:id="@id/mainImage_board1" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="17.0dip" android:layout_below="@id/main_slogan" android:layout_centerHorizontal="true" android:contentDescription="@string/app_name" app:srcCompat="@drawable/ic_icon_board1" />
    <ImageView android:id="@id/mainImage_board2" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="17.0dip" android:layout_below="@id/main_slogan" android:layout_centerHorizontal="true" android:contentDescription="@string/app_name" app:srcCompat="@drawable/ic_icon_board2" />
    <ImageView android:id="@id/mainImage_piece" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="17.0dip" android:layout_below="@id/main_slogan" android:layout_centerHorizontal="true" android:contentDescription="@string/app_name" app:srcCompat="@drawable/ic_icon_piece" />
    <Button android:textSize="25.0sp" android:id="@id/play_button" android:background="@color/colorAccent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/play" android:layout_below="@id/mainImage_board1" android:layout_centerHorizontal="true" android:onClick="playButtonClicked" />
    <Button android:textSize="25.0sp" android:id="@id/host_game_button" android:background="@color/colorAccent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/host_game" android:layout_below="@id/play_button" android:layout_centerHorizontal="true" android:onClick="hostGameButtonClicked" />
    <Button android:textSize="25.0sp" android:id="@id/join_game_button" android:background="@color/colorAccent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/join_game" android:layout_below="@id/host_game_button" android:layout_centerHorizontal="true" android:onClick="joinGameButtonClicked" />
    <Button android:textSize="25.0sp" android:id="@id/about_button" android:background="@color/colorAccent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/about" android:layout_below="@id/join_game_button" android:layout_centerHorizontal="true" android:onClick="aboutButtonClicked" />
    <Button android:textSize="25.0sp" android:id="@id/issues_button" android:background="@color/colorAccent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/issues" android:layout_below="@id/about_button" android:layout_centerHorizontal="true" android:onClick="issuesButtonClicked" />
    <Button android:textSize="25.0sp" android:id="@id/quit_button" android:background="@color/colorAccent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/quit" android:layout_below="@id/issues_button" android:layout_centerHorizontal="true" android:onClick="quitButtonClicked" />
    <ImageButton android:id="@id/achievements_button" android:background="@color/colorAccent" android:layout_width="50.0dip" android:layout_height="50.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="achievementsClicked" app:srcCompat="@drawable/ic_medal" />
    <ImageButton android:id="@id/settings_button" android:background="@color/colorAccent" android:layout_width="50.0dip" android:layout_height="50.0dip" android:scaleType="fitCenter" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="settingsButtonClicked" app:srcCompat="@drawable/ic_settings" />
    <ImageButton android:id="@id/knight_button" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="knightButtonClicked" app:srcCompat="@drawable/ic_filledknight" />
</RelativeLayout>